2006-10-19  Eric Botcazou  <ebotcazou@adacore.com>

	* fold-const.c (add_double): Rename to add_double_with_sign.
	Add 'unsigned_p' parameter and take it into account for the overflow.
	(mul_double): Rename to mul_double_with_sign. 
	Add 'unsigned_p' parameter and take it into account for the overflow.
	(fold_div_compare): Call add_double_with_sign instead of add_double
	and mul_double_with_sign instead of mul_double, passing them the
	unsignedness of the type.
	* tree.h (add_double): Macroize.
	(add_double_with_sign): New prototype.
	(mul_double): Macroize.
	(mul_double_with_sign): New prototype.

2006-10-16  Richard Guenther  <rguenther@suse.de>

	PR target/25519
	* doc/extend.texi (X86 Built-in Functions): Fix typos in
	SSE builtin documentation.  Document SSE2 builtins.

2006-10-15  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config.gcc (hppa*64*-*-hpux11*, hppa[12]*-*-hpux11*): Default to
	posix thread support.

2006-10-09  Steve Ellcey  <sje@cup.hp.com>

	PR target/28490
	Backport from mainline
	2006-09-15  Jim Wilson  <wilson@specifix.com>
	2006-09-19  Steve Ellcey  <sje@cup.hp.com>
	* config/ia64/ia64.c (ia64_legitimate_constant_p): Allow function
	pointers as legitimate constants.  Handle symbol offsets same as
	they are handled in ia64_expand_move and move_operand.

2006-10-08  Andrew Pinski  <pinskia@physics.uc.edu>

	PR debug/28980
	* dwarf2out.c (loc_descriptor_from_tree_1): Handle
	FUNCTION_DECL.

2006-10-08  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/28862
	* stor-layout.c (relayout_decl): Don't zero the alignment if it
	was set by the user.

2006-09-21  Steven Bosscher  <steven@gcc.gnu.org>

	PR middle-end/26983
	Backport from mainline
	* builtins.c (expand_builtin_setjmp): Force next_lab to be
	preserved.

2006-09-19  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/4520
	Backport from mainline
	* cselib.c (cselib_hash_rtx): Avoid hashing on the address of labels