@@ -1,3 +1,7 @@
+2006-10-26  Paolo Bonzini  <bonzini@gnu.org>
+
+	* gcc.dg/simd-5.c, gcc.dg/simd-6: New testcases.
+
 2006-10-19  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.dg/div-compare-1.c: New test.
